TheKabal (3 March 2013)
--------------------------------------
Split create_schema into the more accurate destroy_schema and create_schema
Switched create_schema to use XML schema files in the schema directory
Added schema directory, which contains the XML schema files for building the database

TheKabal (2 March 2013)
--------------------------------------
TEXT_GOTOMAIN has been replaced by \bnt\bnttext::gotomain, which is auto-loaded from the vendor/bnt directory.
Making numbers () calls more consistent, replacing with number_format to move towards removing number() from global_includes
Fixed PHP Notice: Object of class ADORecordSet_mysqlt could not be converted to int
Replace NUMBER() with number_format(), eliminating the need for the NUMBER() function, reducing the number of global includes
destroy_fighters has been replaced with bntfighters::destroy, which is auto-loaded from the vendor/bnt directory.
cancel_bounty has been replaced with bntbounty::cancel, which is auto-loaded from the vendor/bnt directory.
explode_mines has been replaced with bntmines::explode, which is auto-loaded from the vendor/bnt directory.
calc_ownership has been replaced with bntownership::calc, which is auto-loaded from the vendor/bnt directory.
db_kill_player has been replaced with bntplayer::kill, which is auto-loaded from the vendor/bnt directory.
Eliminated the use of request_var, reducing the number of global includes
Coding standards suggest using include_once instead of include for conditional includes
Moved calc_tech arrays from common to calc_avg_tech function (the only place they are used)

TheMightyDude (1 March 2013)
--------------------------------------
Fixed PHP Notice: Use of undefined constant credits - assumed 'credits' in check_fighters.php on line 113
Fixed PHP Notice: Trying to get property of non-object in includes/db_kill_player.php on line 46