@@ -15,7 +15,7 @@
       <DEFAULT value="0"/>
     </field>
     <field name="time" type="T"/>
-    <field name="data" type="C" size="255"/>
+    <field name="data" type="X"/>
     <index name="idate">
       <col>ship_id</col>
       <col>time</col>
