@@ -1,5 +1,6 @@
 TheKabal (3 March 2013)
 --------------------------------------
+Add handling for invalid xml schema files
 Split create_schema into the more accurate destroy_schema and create_schema
 Switched create_schema to use XML schema files in the schema directory
 Added schema directory, which contains the XML schema files for building the database
